--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,30 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.__main {
+  background-image: url(/images/multi-lines-vert1.png),
+    url(/images/multi-lines-vert2.png);
+  background-position: bottom right, left top;
+  background-repeat: no-repeat, no-repeat;
+  background-size: 500px 500px;
+}
+
+.shadow__btn {
+  border: none;
+  color: #fff;
+  text-transform: uppercase;
+  transition: 0.5s;
+  transition-property: box-shadow;
+  letter-spacing: 2px;
+}
+
+.shadow__btn {
+  background: rgb(0, 0, 0);
+  box-shadow: 0 0 25px rgb(127, 127, 127);
+}
+
+.shadow__btn:hover {
+  box-shadow: 0 0 2px rgb(135, 135, 135), 0 0 15px rgb(109, 109, 109),
+    0 0 25px rgb(126, 124, 124), 0 0 50px rgb(90, 90, 90);
+}
