--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  font-family: Manrope;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -35,12 +36,10 @@ body {
 }
 
 .shadow__btn {
-  border: none;
-  color: #fff;
   text-transform: uppercase;
   transition: 0.5s;
   transition-property: box-shadow;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
 }
 
 .shadow__btn {
@@ -51,4 +50,72 @@ body {
 .shadow__btn:hover {
   box-shadow: 0 0 2px rgb(135, 135, 135), 0 0 15px rgb(109, 109, 109),
     0 0 25px rgb(126, 124, 124), 0 0 50px rgb(90, 90, 90);
+}
+
+.__big_heading {
+  font-size: clamp(40px, 8vw, 4rem);
+}
+
+.__logo {
+  clip-path: inset(10% 20% 20% 5%);
+}
+
+.__hamburger {
+  align-items: center;
+  position: relative;
+  z-index: 10;
+  border: 0px;
+  background-color: transparent;
+}
+
+.__hamburger .__hamburger_box {
+  display: inline-block;
+  position: relative;
+  width: 30px;
+  height: 24px;
+}
+
+.__hamburger .__hamburger_box_inner {
+  position: absolute;
+  top: 50%;
+  right: 0px;
+  width: 25px;
+  height: 2px;
+  border-radius: 4px;
+  background-color: white;
+  transition: transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19) 0s;
+  transform: rotate(0deg);
+}
+
+.__hamburger_box_inner::before {
+  width: 120%;
+  top: -10px;
+  opacity: 1;
+  transition: top 0.1s ease-in 0.25s, opacity 0.1s ease-in;
+}
+
+.__hamburger_box_inner::after {
+  width: 120%;
+  top: 10px;
+  opacity: 1;
+  transition: top 0.1s ease-in 0.25s, opacity 0.1s ease-in;
+}
+
+.__hamburger_box_inner::before,
+.__hamburger_box_inner::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: auto;
+  right: 0px;
+  height: 2px;
+  border-radius: 4px;
+  background-color: white;
+  transition-timing-function: ease;
+  transition-duration: 0.15s;
+  transition-property: transform;
+}
+
+li:last-of-type {
+  margin-bottom: 20px;
 }
