--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --header-height: 80px;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,6 +16,10 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -41,7 +45,6 @@ body {
 }
 
 .__main_section {
-  /* margin-top: calc(var(--header-height) + 20px); */
 }
 
 .__main {
@@ -77,7 +80,25 @@ body {
     0 0 20px rgb(126, 124, 124), 0 0 40px rgb(90, 90, 90);
 }
 
-
 li:last-of-type {
   margin-bottom: 20px;
+}
+
+.__numbered_heading {
+  font-size: clamp(26px, 5vw, 32px);
+  white-space: nowrap;
+  margin: 10px 0px 40px;
+  width: 100%;
+  position: relative;
+}
+
+.__numbered_heading::before {
+  position: relative;
+  bottom: -4px;
+  counter-increment: section 1;
+  content: "0" counter(section) ".";
+  margin-right: 10px;
+  font-size: clamp(16px, 3vw, 20px);
+  font-family: var(--font-mono);
+  font-weight: 400;
 }
