--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  /* --foreground-rgb: 0, 0, 0; */
+  /* --background-start-rgb: 214, 219, 220; */
+  /* --background-end-rgb: 255, 255, 255; */
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
   --header-height: 80px;
   --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
