--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,6 @@
 :root {
   /* --foreground-rgb: 0, 0, 0; */
   /* --background-start-rgb: 214, 219, 220; */
-  /* --background-end-rgb: 255, 255, 255; */
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
@@ -48,9 +47,6 @@ body {
     hsla(0, 0%, 9%, 0.489),
     hsla(0, 0%, 0%, 0.523) 110.84%
   );
-}
-
-.__main_section {
 }
 
 .__main {
@@ -128,11 +124,9 @@ li:last-of-type {
   bottom: 0px;
 }
 
-
 .__about_me_pic {
   clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
 }
-
 
 .__project_card:nth-of-type(2n + 1) .__project-tech-list {
   -webkit-box-pack: end;
@@ -162,6 +156,20 @@ li:last-of-type {
   grid-area: 1 / 6 / -1 / -1;
   position: relative;
   z-index: 1;
+}
+
+.__project_image .__image_wrapper img {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  margin: 0;
+  max-width: none;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  object-fit: cover;
 }
 
 .__project_card .__project_image .__image_wrapper::before {
