--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,6 +30,7 @@ html {
 
 body {
   font-family: Manrope;
+  overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
